Updating tracker via automation

--- a/tracker.html
+++ b/tracker.html
@@ -6,8 +6,8 @@
 <script src='js/jquery.js'></script>
 <script src='js/script.js'></script>
 <img src="images\banner.png" alt="PST's Wait a Minute Event" title="PST's Wait a Minute Event">
-<h3 value="utc" onClick="swapTime(event)">as of 2023/05/12 14:39:02 UTC</h3>
-<h4>as of 2023/05/12 14:39:02 UTC</h3>
+<h3 value="utc" onClick="swapTime(event)">as of 2023/05/12 14:48:55 UTC</h3>
+<h4>as of 2023/05/12 14:48:55 UTC</h3>
 <div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org/forum/topic/334336-wait-a-minute-~-discussion/'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
 <div id="goal-count"><table><thead><tr class='percentageFill'><th>Current</th><th>Remaining</th><th>Progress</th></tr></thead>
 <tbody><tr class='percentageFill'><td>1352</td><td>88</td><td id="goalPercentage">93.89%</td></tr></tbody></table></div><br>
@@ -1127,7 +1127,7 @@
 <tr><td>14:37 </td><td>R1p3r_5000      </td><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18919">18919</a>      </td><td>33.27 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />      </td></tr>
 <tr><td>14:38 </td><td>wrestlefanatic77</td><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17650">17650</a></td><td>74.36 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />      </td></tr>
 <tr><td>14:39 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=15004">15004</a>    </td><td>44.96 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />      </td></tr>
-<tr><td>14:40 </td><td>Da-Eastside     </td><td><a href="https://www.playstationtrophies.org/profiles/Da-Eastside/log?id=45215">45215</a>     </td><td>79.81 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />      </td></tr>
+<tr><td>14:40 </td><td>danc97-         </td><td><a href="https://www.playstationtrophies.org/profiles/danc97-/log?id=31572">31572</a>         </td><td>52.44 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />      </td></tr>
 <tr><td>14:41 </td><td>Dolken_swe      </td><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18955">18955</a>      </td><td>98.46 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />      </td></tr>
 <tr><td>14:42 </td><td>Da-Eastside     </td><td><a href="https://www.playstationtrophies.org/profiles/Da-Eastside/log?id=45220">45220</a>     </td><td>72.52 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />      </td></tr>
 <tr><td>14:43 </td><td>Da-Eastside     </td><td><a href="https://www.playstationtrophies.org/profiles/Da-Eastside/log?id=45232">45232</a>     </td><td>63.63 <img src='images\Gold.png' alt='Gold' title='Gold' />            </td></tr>
@@ -1700,7 +1700,7 @@
 <tr><td>staytrue1985    </td><td style="text-align: right;">    102</td></tr>
 <tr><td>Dino_Roar       </td><td style="text-align: right;">     90</td></tr>
 <tr><td>SWEDISH_PIRATE  </td><td style="text-align: right;">     81</td></tr>
-<tr><td>danc97-         </td><td style="text-align: right;">     69</td></tr>
+<tr><td>danc97-         </td><td style="text-align: right;">     70</td></tr>
 <tr><td>mattigummi45    </td><td style="text-align: right;">     66</td></tr>
 <tr><td>R1p3r_5000      </td><td style="text-align: right;">     65</td></tr>
 <tr><td>XxDecieverxX    </td><td style="text-align: right;">     53</td></tr>
@@ -1711,8 +1711,8 @@
 <tr><td>Darth_Krid      </td><td style="text-align: right;">     43</td></tr>
 <tr><td>ejesbd          </td><td style="text-align: right;">     35</td></tr>
 <tr><td>Xemik           </td><td style="text-align: right;">     33</td></tr>
-<tr><td>Da-Eastside     </td><td style="text-align: right;">     28</td></tr>
 <tr><td>lion1325478     </td><td style="text-align: right;">     27</td></tr>
+<tr><td>Da-Eastside     </td><td style="text-align: right;">     27</td></tr>
 <tr><td>slammajamma28   </td><td style="text-align: right;">     26</td></tr>
 <tr><td>sum1_worsethan_u</td><td style="text-align: right;">     26</td></tr>
 <tr><td>diskdocx        </td><td style="text-align: right;">     25</td></tr>
@@ -4200,12 +4200,12 @@
 <tr><th>Info                                 </th><th>Stat                                                                       </th></tr>
 </thead>
 <tbody>
-<tr><td>Total trophies earned                </td><td>5418                                                                       </td></tr>
-<tr><td>Average rarity of all trophies earned</td><td>80.02                                                                      </td></tr>
+<tr><td>Total trophies earned                </td><td>5419                                                                       </td></tr>
+<tr><td>Average rarity of all trophies earned</td><td>80.01                                                                      </td></tr>
 <tr><td>Rarest trophy earned                 </td><td>Barra333 - 0.62 <img src='images\Silver.png' alt='Silver' title='Silver' /></td></tr>
 <tr><td>Number of 100% rarity trophies       </td><td>1009                                                                       </td></tr>
-<tr><td>Most contested hour slot             </td><td>541                                                                        </td></tr>
-<tr><td>Number of bronze trophies            </td><td>2715                                                                       </td></tr>
+<tr><td>Most contested hour slot             </td><td>542                                                                        </td></tr>
+<tr><td>Number of bronze trophies            </td><td>2716                                                                       </td></tr>
 <tr><td>Number of silver trophies            </td><td>1476                                                                       </td></tr>
 <tr><td>Number of gold trophies              </td><td>1078                                                                       </td></tr>
 <tr><td>Number of platinum trophies          </td><td>149                                                                        </td></tr>
@@ -4231,7 +4231,7 @@
 <tr><td>Hour 11      </td><td style="text-align: right;">    114</td></tr>
 <tr><td>Hour 12      </td><td style="text-align: right;">    154</td></tr>
 <tr><td>Hour 13      </td><td style="text-align: right;">    239</td></tr>
-<tr><td>Hour 14      </td><td style="text-align: right;">    541</td></tr>
+<tr><td>Hour 14      </td><td style="text-align: right;">    542</td></tr>
 <tr><td>Hour 15      </td><td style="text-align: right;">    358</td></tr>
 <tr><td>Hour 16      </td><td style="text-align: right;">    410</td></tr>
 <tr><td>Hour 17      </td><td style="text-align: right;">    223</td></tr>
@@ -4254,7 +4254,7 @@
 <tr><td>20% - 29.9%</td><td style="text-align: right;">    194</td></tr>
 <tr><td>30% - 39.9%</td><td style="text-align: right;">    234</td></tr>
 <tr><td>40% - 49.9%</td><td style="text-align: right;">    254</td></tr>
-<tr><td>50% - 59.9%</td><td style="text-align: right;">    270</td></tr>
+<tr><td>50% - 59.9%</td><td style="text-align: right;">    271</td></tr>
 <tr><td>60% - 69.9%</td><td style="text-align: right;">    308</td></tr>
 <tr><td>70% - 79.9%</td><td style="text-align: right;">    265</td></tr>
 <tr><td>80% - 89.9%</td><td style="text-align: right;">    270</td></tr>
