Updating tracker via automation

--- a/tracker.html
+++ b/tracker.html
@@ -6,8 +6,8 @@
 <script src='js/jquery.js'></script>
 <script src='js/script.js'></script>
 <img src="images\banner.png" alt="PST's Wait a Minute Event" title="PST's Wait a Minute Event">
-<h3 value="utc" onClick="swapTime(event)">as of 2023/05/19 14:13:47 UTC</h3>
-<h4>as of 2023/05/19 14:13:47 UTC</h3>
+<h3 value="utc" onClick="swapTime(event)">as of 2023/05/19 14:28:34 UTC</h3>
+<h4>as of 2023/05/19 14:28:34 UTC</h3>
 <div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org/forum/topic/334336-wait-a-minute-~-discussion/'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
 <div id="goal-count"><table><thead><tr class='percentageFill'><th>Current</th><th>Remaining</th><th>Progress</th></tr></thead>
 <tbody><tr class='percentageFill'><td>1440</td><td>0</td><td id="goalPercentage">100.0%</td></tr></tbody></table></div><br>
@@ -1001,7 +1001,7 @@
 <tr><td>12:33 </td><td>sum1_worsethan_u</td><td><a href="https://www.playstationtrophies.org/profiles/sum1_worsethan_u/log?id=13455">13455</a></td><td>20.71 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />      </td></tr>
 <tr><td>12:34 </td><td>Martz4040       </td><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13502">13502</a>       </td><td>26.15 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />      </td></tr>
 <tr><td>12:35 </td><td>sum1_worsethan_u</td><td><a href="https://www.playstationtrophies.org/profiles/sum1_worsethan_u/log?id=13457">13457</a></td><td>13.33 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />      </td></tr>
-<tr><td>12:36 </td><td>SWEDISH_PIRATE  </td><td><a href="https://www.playstationtrophies.org/profiles/SWEDISH_PIRATE/log?id=27917">27917</a>  </td><td>47.79 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />      </td></tr>
+<tr><td>12:36 </td><td>sum1_worsethan_u</td><td><a href="https://www.playstationtrophies.org/profiles/sum1_worsethan_u/log?id=13577">13577</a></td><td>6.18 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />       </td></tr>
 <tr><td>12:37 </td><td>R1p3r_5000      </td><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=19008">19008</a>      </td><td>60.04 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />      </td></tr>
 <tr><td>12:38 </td><td>mattigummi45    </td><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12841">12841</a>    </td><td>11.02 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />      </td></tr>
 <tr><td>12:39 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139776">139776</a>     </td><td>90.73 <img src='images\Gold.png' alt='Gold' title='Gold' />            </td></tr>
@@ -1696,7 +1696,7 @@
 </thead>
 <tbody>
 <tr><td>Dino_Roar       </td><td style="text-align: right;">    120</td></tr>
-<tr><td>SWEDISH_PIRATE  </td><td style="text-align: right;">    107</td></tr>
+<tr><td>SWEDISH_PIRATE  </td><td style="text-align: right;">    106</td></tr>
 <tr><td>Martz4040       </td><td style="text-align: right;">    105</td></tr>
 <tr><td>danc97-         </td><td style="text-align: right;">     97</td></tr>
 <tr><td>Velvet_Bee      </td><td style="text-align: right;">     89</td></tr>
@@ -1715,7 +1715,7 @@
 <tr><td>ejesbd          </td><td style="text-align: right;">     28</td></tr>
 <tr><td>slammajamma28   </td><td style="text-align: right;">     28</td></tr>
 <tr><td>diskdocx        </td><td style="text-align: right;">     27</td></tr>
-<tr><td>sum1_worsethan_u</td><td style="text-align: right;">     25</td></tr>
+<tr><td>sum1_worsethan_u</td><td style="text-align: right;">     26</td></tr>
 <tr><td>lion1325478     </td><td style="text-align: right;">     25</td></tr>
 <tr><td>Ryukori_        </td><td style="text-align: right;">     17</td></tr>
 <tr><td>Road2unner      </td><td style="text-align: right;">     14</td></tr>
@@ -4343,13 +4343,13 @@
 <tr><th>Info                                 </th><th>Stat                                                                                                                                                                         </th></tr>
 </thead>
 <tbody>
-<tr><td>Total trophies earned                </td><td>7122                                                                                                                                                                         </td></tr>
-<tr><td>Average rarity of all trophies earned</td><td>76.91                                                                                                                                                                        </td></tr>
+<tr><td>Total trophies earned                </td><td>7123                                                                                                                                                                         </td></tr>
+<tr><td>Average rarity of all trophies earned</td><td>76.9                                                                                                                                                                         </td></tr>
 <tr><td>Rarest (PSNP rarity) trophy earned   </td><td>Jerry_Appleby #<a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32670">32670</a> - 0.53 <img src='images\Bronze.png' alt='Bronze' title='Bronze' /></td></tr>
 <tr><td>Number of 100% rarity trophies       </td><td>1018                                                                                                                                                                         </td></tr>
 <tr><td>Most earned hour slot                </td><td>653                                                                                                                                                                          </td></tr>
 <tr><td>Most contested time slot             </td><td>13:37 [93]                                                                                                                                                                   </td></tr>
-<tr><td>Number of bronze trophies            </td><td>3770                                                                                                                                                                         </td></tr>
+<tr><td>Number of bronze trophies            </td><td>3771                                                                                                                                                                         </td></tr>
 <tr><td>Number of silver trophies            </td><td>1870                                                                                                                                                                         </td></tr>
 <tr><td>Number of gold trophies              </td><td>1294                                                                                                                                                                         </td></tr>
 <tr><td>Number of platinum trophies          </td><td>188                                                                                                                                                                          </td></tr>
@@ -4405,7 +4405,7 @@
 <tr><td>Hour 9       </td><td style="text-align: right;">    283</td></tr>
 <tr><td>Hour 10      </td><td style="text-align: right;">    343</td></tr>
 <tr><td>Hour 11      </td><td style="text-align: right;">    147</td></tr>
-<tr><td>Hour 12      </td><td style="text-align: right;">    343</td></tr>
+<tr><td>Hour 12      </td><td style="text-align: right;">    344</td></tr>
 <tr><td>Hour 13      </td><td style="text-align: right;">    395</td></tr>
 <tr><td>Hour 14      </td><td style="text-align: right;">    653</td></tr>
 <tr><td>Hour 15      </td><td style="text-align: right;">    440</td></tr>
@@ -4425,7 +4425,7 @@
 <tr><th>Rarity     </th><th style="text-align: right;">  Count</th></tr>
 </thead>
 <tbody>
-<tr><td>< 10%      </td><td style="text-align: right;">    126</td></tr>
+<tr><td>< 10%      </td><td style="text-align: right;">    127</td></tr>
 <tr><td>10% - 19.9%</td><td style="text-align: right;">    297</td></tr>
 <tr><td>20% - 29.9%</td><td style="text-align: right;">    315</td></tr>
 <tr><td>30% - 39.9%</td><td style="text-align: right;">    330</td></tr>
@@ -4444,14 +4444,14 @@
 <tr><th>Info                                    </th><th>Stat                                                                                                                                                                         </th></tr>
 </thead>
 <tbody>
-<tr><td>Total trophies claimed                  </td><td>7122                                                                                                                                                                         </td></tr>
-<tr><td>Average rarity of all time slots claimed</td><td>76.91                                                                                                                                                                        </td></tr>
+<tr><td>Total trophies claimed                  </td><td>1440                                                                                                                                                                         </td></tr>
+<tr><td>Average rarity of all time slots claimed</td><td>380.4                                                                                                                                                                        </td></tr>
 <tr><td>Rarest (PSNP rarity) time slots claimed </td><td>Jerry_Appleby #<a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32670">32670</a> - 0.53 <img src='images\Bronze.png' alt='Bronze' title='Bronze' /></td></tr>
-<tr><td>Number of 100% rarity time slots        </td><td>1018                                                                                                                                                                         </td></tr>
-<tr><td>Number of bronze trophies               </td><td>3770                                                                                                                                                                         </td></tr>
-<tr><td>Number of silver trophies               </td><td>1870                                                                                                                                                                         </td></tr>
-<tr><td>Number of gold trophies                 </td><td>1294                                                                                                                                                                         </td></tr>
-<tr><td>Number of platinum trophies             </td><td>188                                                                                                                                                                          </td></tr>
+<tr><td>Number of 100% rarity time slots        </td><td>51                                                                                                                                                                           </td></tr>
+<tr><td>Number of bronze trophies               </td><td>713                                                                                                                                                                          </td></tr>
+<tr><td>Number of silver trophies               </td><td>417                                                                                                                                                                          </td></tr>
+<tr><td>Number of gold trophies                 </td><td>270                                                                                                                                                                          </td></tr>
+<tr><td>Number of platinum trophies             </td><td>40                                                                                                                                                                           </td></tr>
 </tbody>
 </table>
 <br><h2>RARITY STATS</h2>
@@ -4460,16 +4460,16 @@
 <tr><th>Rarity     </th><th style="text-align: right;">  Count</th></tr>
 </thead>
 <tbody>
-<tr><td>< 10%      </td><td style="text-align: right;">    126</td></tr>
-<tr><td>10% - 19.9%</td><td style="text-align: right;">    297</td></tr>
-<tr><td>20% - 29.9%</td><td style="text-align: right;">    315</td></tr>
-<tr><td>30% - 39.9%</td><td style="text-align: right;">    330</td></tr>
-<tr><td>40% - 49.9%</td><td style="text-align: right;">    399</td></tr>
-<tr><td>50% - 59.9%</td><td style="text-align: right;">    430</td></tr>
-<tr><td>60% - 69.9%</td><td style="text-align: right;">    469</td></tr>
-<tr><td>70% - 79.9%</td><td style="text-align: right;">    479</td></tr>
-<tr><td>80% - 89.9%</td><td style="text-align: right;">    441</td></tr>
-<tr><td>90% - 100% </td><td style="text-align: right;">   2818</td></tr>
+<tr><td>< 10%      </td><td style="text-align: right;">    127</td></tr>
+<tr><td>10% - 19.9%</td><td style="text-align: right;">     66</td></tr>
+<tr><td>20% - 29.9%</td><td style="text-align: right;">     74</td></tr>
+<tr><td>30% - 39.9%</td><td style="text-align: right;">     78</td></tr>
+<tr><td>40% - 49.9%</td><td style="text-align: right;">     88</td></tr>
+<tr><td>50% - 59.9%</td><td style="text-align: right;">     90</td></tr>
+<tr><td>60% - 69.9%</td><td style="text-align: right;">     84</td></tr>
+<tr><td>70% - 79.9%</td><td style="text-align: right;">    118</td></tr>
+<tr><td>80% - 89.9%</td><td style="text-align: right;">     98</td></tr>
+<tr><td>90% - 100% </td><td style="text-align: right;">    657</td></tr>
 </tbody>
 </table>
 </div>
@@ -6383,12 +6383,12 @@
 <tr><th>Info                                 </th><th>Stat                                                                                                                                                                               </th></tr>
 </thead>
 <tbody>
-<tr><td>Total trophies earned                </td><td>170                                                                                                                                                                                </td></tr>
-<tr><td>Average rarity of all trophies earned</td><td>85.01                                                                                                                                                                              </td></tr>
+<tr><td>Total trophies earned                </td><td>171                                                                                                                                                                                </td></tr>
+<tr><td>Average rarity of all trophies earned</td><td>84.55                                                                                                                                                                              </td></tr>
 <tr><td>Rarest (PSNP rarity) trophy earned   </td><td>sum1_worsethan_u #<a href="https://www.playstationtrophies.org/profiles/sum1_worsethan_u/log?id=13465">13465</a> - 4.20 <img src='images\Bronze.png' alt='Bronze' title='Bronze' /></td></tr>
 <tr><td>Number of 100% rarity trophies       </td><td>94                                                                                                                                                                                 </td></tr>
 <tr><td>Most earned hour slot                </td><td>95                                                                                                                                                                                 </td></tr>
-<tr><td>Number of bronze trophies            </td><td>146                                                                                                                                                                                </td></tr>
+<tr><td>Number of bronze trophies            </td><td>147                                                                                                                                                                                </td></tr>
 <tr><td>Number of silver trophies            </td><td>19                                                                                                                                                                                 </td></tr>
 <tr><td>Number of gold trophies              </td><td>4                                                                                                                                                                                  </td></tr>
 <tr><td>Number of platinum trophies          </td><td>1                                                                                                                                                                                  </td></tr>
@@ -6412,7 +6412,7 @@
 <tr><td>Hour 9       </td><td style="text-align: right;">      3</td></tr>
 <tr><td>Hour 10      </td><td style="text-align: right;">     95</td></tr>
 <tr><td>Hour 11      </td><td style="text-align: right;">      3</td></tr>
-<tr><td>Hour 12      </td><td style="text-align: right;">     14</td></tr>
+<tr><td>Hour 12      </td><td style="text-align: right;">     15</td></tr>
 <tr><td>Hour 13      </td><td style="text-align: right;">      4</td></tr>
 <tr><td>Hour 14      </td><td style="text-align: right;">      2</td></tr>
 <tr><td>Hour 15      </td><td style="text-align: right;">      1</td></tr>
@@ -6432,7 +6432,7 @@
 <tr><th>Rarity     </th><th style="text-align: right;">  Count</th></tr>
 </thead>
 <tbody>
-<tr><td>< 10%      </td><td style="text-align: right;">      6</td></tr>
+<tr><td>< 10%      </td><td style="text-align: right;">      7</td></tr>
 <tr><td>10% - 19.9%</td><td style="text-align: right;">      6</td></tr>
 <tr><td>20% - 29.9%</td><td style="text-align: right;">     11</td></tr>
 <tr><td>30% - 39.9%</td><td style="text-align: right;">      5</td></tr>
