Separate matti and martz

--- a/mattigummi45.html
+++ b/mattigummi45.html
@@ -6,8 +6,8 @@
 <script src='js/jquery.js'></script>
 <script src='js/script.js'></script>
 <img src="images\banner.png" alt="PST's Wait a Minute Event" title="PST's Wait a Minute Event">
-<h3 value="utc" onClick="swapTime(event)">as of 2023/05/23 11:50:21 UTC</h3>
-<h4>as of 2023/05/23 11:50:21 UTC</h3>
+<h3 value="utc" onClick="swapTime(event)">as of 2023/05/23 13:35:58 UTC</h3>
+<h4>as of 2023/05/23 13:35:58 UTC</h3>
 <div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org/forum/topic/334336-wait-a-minute-~-discussion/'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
 <div id="goal-count"><table><thead><tr class='percentageFill'><th>Current</th><th>Remaining</th><th>Progress</th></tr></thead>
 <tbody><tr class='percentageFill'><td>154</td><td>1286</td><td id="goalPercentage">10.69%</td></tr></tbody></table></div><br>
@@ -1779,6 +1779,7 @@
 <button onclick="showStat(event, 'Overall')">Overall</button><br>
 <button onclick="showStat(event, 'Claimed')">Claimed</button><br>
 <button onclick="showStat(event, 'mattigummi45')">mattigummi45</button><br>
+<button onclick="showStat(event, 'Martz4040')">Martz4040</button><br>
 </div></div>
 <div id='Overall_stats' class='stats_table'>
 <h2>GENERAL STATS</h2>
